--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
 					<div class="about-field"><i class="fas fa-birthday-cake field-icon"></i> April 17th</div>
 					<div class="about-field"><i class="fas fa-map-marker-alt field-icon"></i> Cincinnati, OH</div>
 					<div class="about-field"><i class="fas fa-calendar field-icon"></i> Watching Since 2002</div>
-					<div class="about-field"><i class="fas fa-heart field-icon"></i> Waifu: <img class="waifu" src="assets/images/icons/waifu.png"></img> Shirayuki</div>
-					<div class="about-field"><i class="fas fa-place-of-worship field-icon"></i> Thighdeology</div>
+					<div class="about-field"><i class="fas fa-heart field-icon"></i> Waifu: <img class="waifu" src="assets/images/icons/waifu.png"></img> Shirayuki</div>					
 					<div class="about-field"><i class="fas fa-microphone-alt field-icon"></i> English Dubbed</div>
 				</div><!-- about fields -->
 				
@@ -79,6 +78,26 @@
 				<div id="tab_spotlight" class="tab tab-actionable main-item">
 					<div class="spotlight-artical">
 						<h2 class="spotlight-article-title">
+							All Gas, No Breaks, An Absolute Beast!
+						</h2>
+						<p class="spotlight-article-text">
+							I haven’t felt this much action-packed adrenaline since One Punch Man. The Kaiju are sick, and the fights have been explosive! OP "Abyss" by YUNGBLUD and ED "Nobody" by OneRepublic on repeat, never skip! I didn’t expect this level intensity and I have been hyped for each week’s new episode.
+						</p>
+						<div class="spotlight-article-media-container">
+							<img class="spotlight-article-media" src="assets/images/spotlight-article-media/All_gas,_no_breaks,_an_absolute_beast/article-media_01.webp" alt=""></img>
+						</div>
+						<div class="spotlight-article-source-container">
+							<a class="spotlight-article-source-kitsu" href="https://kitsu.io/anime/kaijuu-8-gou">
+								<div class="source-kitsu-image-container">
+									<img class="source-kitsu-image" src="assets/images/spotlight-article-media/All_gas,_no_breaks,_an_absolute_beast/article-source_01.jpeg" alt=""></img>
+								</div>
+								<h4 class="source-kitsu-title">Kaiju No. 8</h4>
+							</a>
+						</div>
+					</div>					
+					
+					<div class="spotlight-artical">
+						<h2 class="spotlight-article-title">
 							Holo and Lawrence Are Back!!!
 						</h2>
 						<p class="spotlight-article-text">
@@ -95,10 +114,10 @@
 								<h4 class="source-kitsu-title">Spice and Wolf: merchant meets the wise wolf</h4>
 							</a>
 						</div>
-					</div>					
+					</div>
 					<div class="spotlight-artical">
 						<h2 class="spotlight-article-title">
-							An underrated one season wonder!
+							An Underrated One Season Wonder!
 						</h2>
 						<p class="spotlight-article-text">
 							A self-contained, 12 episode, fairly recent show; a compelling and interesting sci-fi mystery with developed characters; and an ending with all plot points neatly tied up!
@@ -117,7 +136,7 @@
 					</div>
 					<div class="spotlight-artical">
 						<h2 class="spotlight-article-title">
-							Gorgeous aesthetic and I’m hooked on the suspense!
+							Gorgeous Aesthetic and I’m Hooked On The Suspense!
 						</h2>
 						<p class="spotlight-article-text">
 							Emilico and Kate are adorable; the classic Victorian style and setting are my favorite; the premise is interestingly unique; Ghibli soot sprites are just built different haha! I had no idea what to expect, but wow, been a while since I got pulled in like this.
@@ -136,18 +155,18 @@
 					</div>
 					<div class="spotlight-artical">
 						<h2 class="spotlight-article-title">
-							Adorable, must protec, and total Spice and Wolf vibes!
+							Adorable, Must Protect, and Total Spice and Wolf Vibes!
 						</h2>
 						<p class="spotlight-article-text">
 							I love the characters, entertaining economics and negotiations, this setting and time period are my favorite, and just the little bit of magic to keep it interesting. I completely did not expect to like this show as much as I do.
 						</p>
 						<div class="spotlight-article-media-container">
-							<img class="spotlight-article-media" src="assets/images/spotlight-article-media/Adorable_must_protec_and_total_Spice_and_Wolf_vibes/article-media_01.png" alt=""></img>
+							<img class="spotlight-article-media" src="assets/images/spotlight-article-media/Adorable,_Must_Protect,_and_Total_Spice_and_Wolf_Vibes!/article-media_01.png" alt=""></img>
 						</div>
 						<div class="spotlight-article-source-container">
 							<a class="spotlight-article-source-kitsu" href="https://kitsu.io/anime/honzuki-no-gekujou-shisho-ni-naru-tame-niwa-shudan-o-erandeiramasen">
 								<div class="source-kitsu-image-container">
-									<img class="source-kitsu-image" src="assets/images/spotlight-article-media/Adorable_must_protec_and_total_Spice_and_Wolf_vibes/article-source_01.jpg" alt=""></img>
+									<img class="source-kitsu-image" src="assets/images/spotlight-article-media/Adorable,_Must_Protect,_and_Total_Spice_and_Wolf_Vibes!/article-source_01.jpg" alt=""></img>
 								</div>
 								<h4 class="source-kitsu-title">Ascendance of a Bookworm</h4>
 							</a>
@@ -155,18 +174,18 @@
 					</div>
 					<div class="spotlight-artical">
 						<h2 class="spotlight-article-title">
-							Super chill, max comf, great series!
+							Super Chill, Max Comfy
 						</h2>
 						<p class="spotlight-article-text">
 							One of the best slow burn, enjoy the moment shows. Fun characters, chill music, and cozy visuals. Makes we want to set up camp, drink hot coco, and eat awesome food.
 						</p>
 						<div class="spotlight-article-media-container">
-							<img class="spotlight-article-media" src="assets/images/spotlight-article-media/Super chill,_max_comf,_great_series/article-media_01.png" alt=""></img>
+							<img class="spotlight-article-media" src="assets/images/spotlight-article-media/Super_Chill,_Max_Comfy/article-media_01.png" alt=""></img>
 						</div>
 						<div class="spotlight-article-source-container">
 							<a class="spotlight-article-source-kitsu" href="https://kitsu.io/anime/yuru-camp">
 								<div class="source-kitsu-image-container">
-									<img class="source-kitsu-image" src="assets/images/spotlight-article-media/Super chill,_max_comf,_great_series/article-source_01.jpg" alt=""></img>
+									<img class="source-kitsu-image" src="assets/images/spotlight-article-media/Super_Chill,_Max_Comfy/article-source_01.jpg" alt=""></img>
 								</div>
 								<h4 class="source-kitsu-title">Laid-Back Camp</h4>
 							</a>
@@ -771,7 +790,8 @@
 						<span class="lf-feature-source"><i class="fa-brands fa-twitter"></i> @DB_official_en</span>
 						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/Akira-Toriyama.jfif"></img>
 					</a>
-				</div>										
+				</div>
+
 				<div class="lf-list">
 					<h3 class="lf-heading">News</h3>				
 					<a class="lf-link" href="https://www.reddit.com/r/anime/">
@@ -1335,7 +1355,7 @@
 							</div>
 						</div>
 					</a>
-
+					<!--
 					<a class="lf-link more-lf-artistfanart" href="https://x.com/bluethebone">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/twitterpropic-bluethebone.jpg"></img>
@@ -1380,55 +1400,7 @@
 								<span class="lf-handle"><i class="fa-brands fa-twitter lf-handle-icon"></i> @Phat_Smash</span>
 							</div>
 						</div>
-					</a>
-					<!--
-						<a class="lf-link more-lf-artistfanart" href="https://www.reddit.com/r/awwnime/">
-							<div class="lf-item-container">								
-								<img loading="Lazy" class="lf-image" src="https://b.thumbs.redditmedia.com/ijZapWdhc7PDif8CfSDhvp9G2wYAtc877Sy74vQ8yfI.png"></img>
-								<div class="lf-text">
-									<span class="lf-displayname">r/awwnime</span>
-									<span class="lf-handle"><i class="fa-brands fa-reddit-alien lf-handle-icon"></i> /r/awwnime</span>
-								</div>
-							</div>
-						</a>					
-						<a class="lf-link more-lf-artistfanart" href="https://www.reddit.com/r/ImaginarySliceOfLife/">
-							<div class="lf-item-container">								
-								<img loading="Lazy" class="lf-image" src="https://b.thumbs.redditmedia.com/MLO5GnkT-lxqK_d-7zZjA77WCLjDq8qPjU-BpOfzWOs.png"></img>
-								<div class="lf-text">
-									<span class="lf-displayname">r/ImaginarySliceOfLife</span>
-									<span class="lf-handle"><i class="fa-brands fa-reddit-alien lf-handle-icon"></i> /r/ImaginarySliceOfLife</span>
-								</div>
-							</div>
-						</a>
-
-						<a class="lf-link more-lf-artistfanart" href="https://www.reddit.com/r/Pixivision/">
-							<div class="lf-item-container">								
-								<img loading="Lazy" class="lf-image" src="assets/images/icons/pixivision-icon.png"></img>
-								<div class="lf-text">
-									<span class="lf-displayname">r/Pixivision</span>
-									<span class="lf-handle"><i class="fa-brands fa-reddit-alien lf-handle-icon"></i> /r/Pixivision</span>
-								</div>
-							</div>
-						</a>
-
-						<a class="lf-link more-lf-artistfanart" href="https://www.reddit.com/r/thighdeology/">
-							<div class="lf-item-container">								
-								<img loading="Lazy" class="lf-image" src="assets/images/icons/thighdeology-icon.png"></img>
-								<div class="lf-text">
-									<span class="lf-displayname">r/thighdeology <span class="nsfw-tag">nsfw</span></span>
-									<span class="lf-handle"><i class="fa-brands fa-reddit-alien lf-handle-icon"></i> /r/thighdeology</span>
-								</div>
-							</div>
-						</a>
-						<a class="lf-link more-lf-artistfanart" href="https://www.reddit.com/r/BigAnimeTiddies/">
-							<div class="lf-item-container">								
-								<img loading="Lazy" class="lf-image" src="assets/images/icons/BigAnimeTiddies-icon.png"></img>
-								<div class="lf-text">
-									<span class="lf-displayname">r/BigAnimeTiddies <span class="nsfw-tag">nsfw</span></span>
-									<span class="lf-handle"><i class="fa-brands fa-reddit-alien lf-handle-icon"></i> /r/BigAnimeTiddies</span>
-								</div>
-							</div>
-						</a>						
+					</a>					
 					-->
 				</div><!-- Fanart -->
 			</div><!-- links and follows -->
