--- a/index.html
+++ b/index.html
@@ -306,8 +306,7 @@
 							<a class="tile" href="https://kitsu.io/anime/tensei-shitara-slime-datta-ken-3rd-season"><img class="tile-image" src="https://media.kitsu.io/anime/46729/poster_image/large-4b30dd0d5a2559d47365fa80caa9a923.jpeg" alt="That Time I Got Reincarnated as a Slime Season 3"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/Mushoku-Tensei-II-Isekai-Ittara-Honki-Dasu-Part-2"><img class="tile-image" src="https://media.kitsu.io/anime/47694/poster_image/large-b5bde230c0bff92d223d3f792cbd462a.jpeg" alt="Jobless Reincarnation Season 2 Part 2"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/tsuki-ga-michibiku-isekai-douchuu-2"><img class="tile-image" src="https://media.kitsu.io/anime/45235/poster_image/large-a9217949be9a05b93beba240ee401d36.jpeg" alt="Tsukimichi -Moonlit Fantasy- 2"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/yuru-camp-3"><img class="tile-image" src="https://media.kitsu.io/anime/46649/poster_image/large-6671ae841d0897a9f999cb9417f7695b.jpeg" alt="Laid Back Camp 3"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/wind-breaker"><img class="tile-image" src="https://media.kitsu.io/anime/47271/poster_image/large-4db5612774e7a34e2664252babd17044.jpeg" alt="WIND BREAKER"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/yuru-camp-3"><img class="tile-image" src="https://media.kitsu.io/anime/46649/poster_image/large-6671ae841d0897a9f999cb9417f7695b.jpeg" alt="Laid Back Camp 3"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/boku-no-hero-academia-7th-season"><img class="tile-image" src="https://media.kitsu.io/anime/47232/poster_image/large-e72a84111240e5a313fca1a65341303d.jpeg" alt="Hero Academia Season 7"></img></a>
 						</div><!-- tiled-list -->
 					</div><!-- Currently Watching-->			
@@ -395,15 +394,15 @@
 							<a class="tile" href="https://kitsu.io/anime/fairy-tail-100-years-quest"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/45159/large.jpg" alt="Fairy Tail: 100 Years Quest"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/oshi-no-ko-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/47659/poster_image/large-8881975ead44514c3d76220a7b86e19d.jpeg" alt="Oshi no Ko Season 2"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/tower-of-god-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/46312/poster_image/large-33aed078a19ee6d0e2abdd57ef0e0bb5.jpeg" alt="Tower of God Season 2"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/madougushi-dahlia-wa-utsumukanai"><img class="tile-image" src="https://media.kitsu.io/anime/47892/poster_image/large-3fd1a21d91b3d15272f019c74e73adbc.jpeg" alt="Dahlia in Bloom: Crafting a Fresh Start with Magical Tools"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/kimi-to-boku-no-saigo-no-senjou-aruiwa-sekai-ga-hajimaru-seisen-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/45272/poster_image/large-5f928f55eaa9e41087a9b0bc396e211a.jpeg" alt="Our Last Crusade or the Rise of a New World Season 2"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/madougushi-dahlia-wa-utsumukanai"><img class="tile-image" src="https://media.kitsu.io/anime/47892/poster_image/large-3fd1a21d91b3d15272f019c74e73adbc.jpeg" alt="Dahlia in Bloom: Crafting a Fresh Start with Magical Tools"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/tokidoki-bosotto-russiago-de-dereru-tonari-no-alya-san"><img class="tile-image" src="https://media.kitsu.io/anime/47192/poster_image/large-ffe551f96e2a57082b30e79ac3fe1cbc.jpeg" alt="Alya Sometimes Hides Her Feelings in Russian"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/vtuber-nanda-ga-haishin-kiri-wasuretara-densetsu-ni-natteta"><img class="tile-image" src="https://media.kitsu.io/anime/47004/poster_image/large-0fea164d0a348eb8334d2f93072b5abd.jpeg" alt="VTuber Legend"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/naze-boku-no-sekai-wo-daremo-oboeteinai-no-ka"><img class="tile-image" src="https://media.kitsu.io/anime/47786/poster_image/large-d39062d7cee2973b2f34e4597fc4733a.jpeg" alt="Why nobody remembers my world?"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/isekai-shikkaku"><img class="tile-image" src="https://media.kitsu.io/anime/46243/poster_image/large-cf4b8e6822213be137cb4410e7f576cf.jpeg" alt="No Longer Human…In Another World"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/kimi-to-boku-no-saigo-no-senjou-aruiwa-sekai-ga-hajimaru-seisen-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/45272/poster_image/large-5f928f55eaa9e41087a9b0bc396e211a.jpeg" alt="Our Last Crusade or the Rise of a New World Season 2"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/ore-wa-subete-wo-parry-suru-gyaku-kanchigai-no-sekai-saikyou-wa-boukensha-ni-naritai"><img class="tile-image" src="https://media.kitsu.io/anime/48202/poster_image/large-a044a94c2cc0319f290269422ec5d1bc.jpeg" alt="I Parry Everything"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/shinmai-ossan-bouken-sha-saikyou-party-ni-shinu-hodo-kitaerarete-muteki-ni-naru"><img class="tile-image" src="https://media.kitsu.io/anime/47272/poster_image/large-a15d361272c8382c2fec65729076c0c5.jpeg" alt="The Rookie Middle-Aged Adventurer Was Trained to Deat"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/tsue-to-tsurugi-no-wistoria"><img class="tile-image" src="https://media.kitsu.io/anime/48534/poster_image/large-703abd524d4c595bc05eaf5f3c3e1454.jpeg" alt="Wistoria: Wand and Sword"></img></a>
-							
+							<a class="tile" href="https://kitsu.io/anime/kono-sekai-wa-fukanzen-sugiru"><img class="tile-image" src="https://media.kitsu.io/anime/47236/poster_image/large-8f2f4bb1adabfd4d8fb75a17cfee25f0.jpeg" alt="Quality Assurance in Another World"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/bye-bye-earth"><img class="tile-image" src="https://media.kitsu.io/anime/46764/poster_image/large-9fbae82f268cf9a2478d76e67804cad4.jpeg" alt="Bye Bye, Earth"></img></a>
 						</div><!-- tiled-list -->
 
 						<h3 class="section-subheading">Later</h3> 
@@ -674,9 +673,11 @@
 							<a class="tile" href="https://myanimelist.net/character/163271/Tsukasa_Yuzaki"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Tsukasa-Yuzaki.png" alt="Tsukuyomi Yuzaki"></img></a>							
 							<a class="tile" href="https://myanimelist.net/character/151335/Elaina"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Elaina_large.jpg" alt="Elaina The Ashen Witch"></img></a>
 						</div>
+						<!--
 						<button onclick="more_female_btn()" id="more_female_btn" class="btn-pill-full-width">Show more</button>
+						-->
 					</div><!--Female Characters-->
-
+					<!--
 					<div id="more_cards_female" class="scrolling-cards favorite-item">
 						<div class="tiled-list-card first-card">					
 							<h4 class="tile-card-heading">My Clasics</h4>
@@ -706,21 +707,12 @@
 							</div>
 						</div>
 						<div class="tiled-list-card">					
-							<h4 class="tile-card-heading">Powerpacked</h4>
-							<div class="card-tiled-list">
-								<a class="tile" href="https://myanimelist.net/character/2063/Yoko_Littner"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Yoko-Littner_large.jpg" alt="Yoko Littner"></img></a>
-								<a class="tile" href="https://myanimelist.net/character/13701/Mikoto_Misaka?q=mikoto%20misaka&cat=character"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Mikoto-Misaka_large.jpg" alt="Mikoto Misaka"></img></a>						
-								<a class="tile" href="https://myanimelist.net/character/8439/Maka_Albarn"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Maka-Albarn_large.jpg" alt="Maka Albarn"></img></a>
-								<a class="tile" href="https://myanimelist.net/character/43121/Morgiana"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Morgiana_large.jpg" alt="Morgiana"></img></a>
-							</div>
-						</div>
-						<div class="tiled-list-card">					
 							<h4 class="tile-card-heading">Shonen Wamen</h4>
 							<div class="card-tiled-list">								
 								<a class="tile" href="https://myanimelist.net/character/133768/Maki_Oze"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Maki-Oze_large.png" alt="Maki Oze"></img></a>								
-								<a class="tile" href="https://myanimelist.net/character/75284/Erina_Nakiri"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Erina-Nakiri_large.jpg" alt="Erina Nakiri"></img></a>								
-								<a class="tile" href="https://myanimelist.net/character/127141/Noelle_Silva"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Noelle-Silva_large.png" alt="Noelle Silva"></img></a>
-								<a class="tile" href="https://myanimelist.net/character/117917/Ochako_Uraraka"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Ochako-Uraraka_large.jpg" alt="Ochako Uraraka"></img></a>								
+								<a class="tile" href="https://myanimelist.net/character/75284/Erina_Nakiri"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Erina-Nakiri_large.jpg" alt="Erina Nakiri"></img></a>
+								<a class="tile" href="https://myanimelist.net/character/13701/Mikoto_Misaka?q=mikoto%20misaka&cat=character"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Mikoto-Misaka_large.jpg" alt="Mikoto Misaka"></img></a>						
+								<a class="tile" href="https://myanimelist.net/character/127141/Noelle_Silva"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Noelle-Silva_large.png" alt="Noelle Silva"></img></a>								
 							</div>
 						</div>
 						<div class="tiled-list-card">					
@@ -733,19 +725,6 @@
 							</div>
 						</div>
 						<div class="tiled-list-card">					
-							<h4 class="tile-card-heading">Must Protec</h4>
-							<div class="card-tiled-list">						
-								<a class="tile" href="https://myanimelist.net/character/163811/Myne"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Myne_large.jpg" alt="Myne"></img></a>
-								<a class="tile" href="https://myanimelist.net/character/111045/Anzu"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Anzu_large.jpg" alt="Anzu"></img></a>
-								<a class="tile" href="https://myanimelist.net/character/169955/Emilico"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Emilico_large.jpg" alt="Emilico"></img></a>
-								<a class="tile" href="https://myanimelist.net/character/170256/Anya_Forger"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Anya-Forger_large.jpg" alt="Anya Forger"></img></a>
-								<!--
-									<a class="tile" href="https://myanimelist.net/character/174332/Maple"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Maple_large.jpg" alt="Maple"></img></a>
-									<a class="tile" href="https://myanimelist.net/character/159166/Catarina_Claes"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/Catarina-Claes_large.jpg" alt="Catarina Claes"></img></a>
-								-->
-							</div>
-						</div><!---->		
-						<div class="tiled-list-card">					
 							<h4 class="tile-card-heading">Fantasy Favs</h4>
 							<div class="card-tiled-list">						
 								<a class="tile" href="https://myanimelist.net/character/99441/Chise_Hatori"><img loading="Lazy" class="tile-image" src="assets/images/thumbnails/Characters/chise_large.jpg" alt="Chise"></img></a>
@@ -755,7 +734,8 @@
 							</div>
 						</div>
 						<div class="tiled-list-card last-card"></div>
-					</div><!-- more_cards_female -->	
+					</div>
+				-->
 					
 					<div class="favorite-item"><!--Male Characters-->
 						<h2 class="section-heading">Male Characters</h2>
@@ -848,15 +828,15 @@
 			<div id="tab_linksandfollows" class="tab tab-actionable sidebar-content">
 				<div class="lf-feature">
 					<a class="lf-feature-link" href="https://www.crunchyroll.com/news/seasonal-lineup/2024/6/18/summer-2024-anime-crunchyroll">
-						<h3 class="lf-feature-title">Crunchyroll Summer 2024 Season Lineup</h3>
+						<h3 class="lf-feature-title">Crunchyroll Summer 2024 Season Lineup!</h3>
 						<span class="lf-feature-source"><i class="fa-solid fa-link"></i> Crunchryoll News</span>
 						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/Crunchyroll-Summer-2024.jfif"></img>
-					</a>					
-					<a class="lf-feature-link" href="https://animeohio.com/">
-						<h3 class="lf-feature-title">Anime Ohio June 21 - June 23</h3>
-						<span class="lf-feature-source"><i class="fa-solid fa-link"></i> animeohio.com</span>
-						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/anime-ohio.png"></img>
 					</a>
+					<a class="lf-feature-link" href="https://news.hidive.com/2024/6/24/summer-2024-on-hidive-sizzling-anime-simulcasts-and-exclusive-english-dubs-await-you">
+						<h3 class="lf-feature-title">Hidive Summer 2024 Season Lineup!</h3>
+						<span class="lf-feature-source"><i class="fa-solid fa-link"></i> Hidive News</span>
+						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/hidive-summer-2024.jpg"></img>
+					</a>					
 					<a class="lf-feature-link" href="https://twitter.com/hiro_mashima/status/1767399768697995324">
 						<h3 class="lf-feature-title"> Fairy Tail: 100 Years Quest July 2024</h3>
 						<span class="lf-feature-source"><i class="fa-brands fa-twitter"></i> @hiro_mashima</span>
