--- a/index.html
+++ b/index.html
@@ -1247,7 +1247,44 @@
 							</div>
 						</div>
 					</a>
-					<a class="lf-link" href="https://www.youtube.com/@aaapodcast">
+					<a class="lf-link" href="https://open.spotify.com/show/5mPOxLwWMohSLSi72b8Grx?go=1&sp_cid=c481fc6b0f7dea531a4ff46cb798634b&utm_source=embed_player_p&utm_medium=desktop&nd=1&dlsi=24d022b8f81147d1">
+						<div class="lf-item-container">								
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/TheAnimeBacklog.jpg"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">The Anime Backlog Podcast</span>
+								<span class="lf-handle"><i class="fa-brands fa-spotify lf-handle-icon"></i> @TheAnimeBacklog</span>
+							</div>
+						</div>
+					</a>
+					<a class="lf-link" href="https://www.youtube.com/@ThirdImpactAnime">
+						<div class="lf-item-container">								
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/ThirdImpactAnime.jpg"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">Third Impact Anime Podcast</span>
+								<span class="lf-handle"><i class="fa-brands fa-youtube lf-handle-icon"></i> @ThirdImpactAnime</span>
+							</div>
+						</div>
+					</a>
+					<a class="lf-link" href="https://www.youtube.com/@AnimeDegens/">
+						<div class="lf-item-container">								
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/AnimeDegens.jpg"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">Anime Degens Podcast</span>
+								<span class="lf-handle"><i class="fa-brands fa-youtube lf-handle-icon"></i> @AnimeDegens</span>
+							</div>
+						</div>
+					</a>
+					<a class="lf-link" href="https://www.youtube.com/@animepodcast/featured">
+						<div class="lf-item-container">
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/animepodcast.jpg"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">What Do You Say Anime!?</span>
+								<span class="lf-handle"><i class="fa-brands fa-youtube lf-handle-icon"></i> @animepodcast</span>
+							</div>
+						</div>
+					</a>
+					<button onclick="more_podcast_and_playlists_btn()" id="more_podcast_and_playlists_btn" class="more-lf-link-btn">Show more</button>
+					<a class="lf-link more-podcast-and-playlists" href="https://www.youtube.com/@aaapodcast">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/youtubepropic-aaapodcast.jpg"></img>
 							<div class="lf-text">
@@ -1256,7 +1293,16 @@
 							</div>
 						</div>
 					</a>
-					<a class="lf-link" href="https://open.spotify.com/playlist/37i9dQZF1DWT8aqnwgRt92?si=7f94ab8116dd44cf">
+					<a class="lf-link more-podcast-and-playlists" href="https://open.spotify.com/playlist/0QUHILqGzZ0Hp8JOAIVxLX?si=f82484fec2934f64">
+						<div class="lf-item-container">								
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/spotify-anime.jfif"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">Anime</span>
+								<span class="lf-handle"><i class="fa-brands fa-spotify lf-handle-icon"></i> @Andrew King</span>
+							</div>
+						</div>
+					</a>					
+					<a class="lf-link more-podcast-and-playlists" href="https://open.spotify.com/playlist/37i9dQZF1DWT8aqnwgRt92?si=7f94ab8116dd44cf">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/spotify-AnimeNow.jfif"></img>
 							<div class="lf-text">
@@ -1265,7 +1311,7 @@
 							</div>
 						</div>
 					</a>
-					<a class="lf-link" href="https://open.spotify.com/playlist/37i9dQZF1DX0hAXqBDwvwI?si=4edc8e97c8514e2a">
+					<a class="lf-link more-podcast-and-playlists" href="https://open.spotify.com/playlist/37i9dQZF1DX0hAXqBDwvwI?si=4edc8e97c8514e2a">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/spotify-AnimeOnReplay.jfif"></img>
 							<div class="lf-text">
@@ -1274,15 +1320,15 @@
 							</div>
 						</div>
 					</a>
-					<a class="lf-link" href="https://open.spotify.com/playlist/0QUHILqGzZ0Hp8JOAIVxLX?si=f82484fec2934f64">
+					<a class="lf-link more-podcast-and-playlists" href="https://open.spotify.com/playlist/37i9dQZF1DWZ7ED4HoeZTx?si=b058ab436c9b4ff7">
 						<div class="lf-item-container">								
-							<img loading="Lazy" class="lf-image" src="assets/images/icons/spotify-anime.jfif"></img>
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/slice_of_life.jpg"></img>
 							<div class="lf-text">
-								<span class="lf-displayname">Anime</span>
-								<span class="lf-handle"><i class="fa-brands fa-spotify lf-handle-icon"></i> @Andrew King</span>
+								<span class="lf-displayname">Slice of Life</span>
+								<span class="lf-handle"><i class="fa-brands fa-spotify lf-handle-icon"></i> @Spotify</span>
 							</div>
 						</div>
-					</a>		
+					</a>
 				</div>				
 				<div class="lf-list">
 					<h3 class="lf-heading">Artists & Fanart</h3>							
