Implemented spotlight sub articles
Implemented spotlight sub articles and updated content

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<!-- MyAnimeProfile Rebase-->
 	<head>
 		<title>MyAnimeProfile</title>
+		<link rel="icon" type="image/x-icon" href="favicon.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -78,42 +79,55 @@
 				<div id="tab_spotlight" class="tab tab-actionable main-item">
 					<div class="spotlight-artical">
 						<h2 class="spotlight-article-title">
-							Crunchyroll Please Dub Pseudo Harem!
+							Crunchyroll Please Don’t Sleep on Dubbing
 						</h2>
-						<p class="spotlight-article-text">
-							Looks hilarious, wholesome, and possibly has a best girl contender! I’m really needing my romcom fix for the season and this could be it. Crunchyroll, please reconsider dubbing this show!
-						</p>
-						<div class="spotlight-article-media-container">
-							<img class="spotlight-article-media" src="assets/images/spotlight-article-media/Pseudo_Harem/article-media_01.jpg" alt=""></img>
-						</div>
-						<div class="spotlight-article-source-container">
-							<a class="spotlight-article-source-kitsu" href="https://kitsu.io/anime/giji-harem">
-								<div class="source-kitsu-image-container">
-									<img class="source-kitsu-image" src="assets/images/spotlight-article-media/Pseudo_Harem/article-source_01.jpeg" alt=""></img>
-								</div>
-								<h4 class="source-kitsu-title">Pseudo Harem</h4>
+						<div class="spotlight-sub-article">
+							<a class="spotlight-sub-article-title-link" href="https://kitsu.io/anime/madougushi-dahlia-wa-utsumukanai">
+								<h3 class="spotlight-sub-article-title">Dahlia in Bloom: Crafting a Fresh Start with Magical Tools</h3>
 							</a>
+							<div class="spotlight-sub-article-media-containter">
+								<img class="spotlight-sub-article-media" src="assets/images/spotlight-article-media/Crunchyroll_Please_Dont_Sleep_on_Dubbing/article-media_01.webp" alt=""></img>
+							</div>
+							<p class="spotlight-sub-article-text">
+								A crimson redhead with green eyes and a medieval era magical fantasy world with beautifully rich and flavorful color tones. Hits all my favorites!
+							</p>
 						</div>
-					</div>
-					<div class="spotlight-artical">
-						<h2 class="spotlight-article-title">
-							Hits All My Favorites, This Looks Amazing! Crunchyroll, Please Dub!
-						</h2>
-						<p class="spotlight-article-text">
-							A crimson redhead with green eyes and a medieval era magical fantasy world with beautifully rich and flavorful color tones. I’m sold, going to be watching this!
-						</p>
-						<div class="spotlight-article-media-container">
-							<img class="spotlight-article-media" src="assets/images/spotlight-article-media/Madougushi_Dahlia_wa_Utsumukanai/article-media_01.webp" alt=""></img>
-						</div>
-						<div class="spotlight-article-source-container">
-							<a class="spotlight-article-source-kitsu" href="https://kitsu.io/anime/madougushi-dahlia-wa-utsumukanai">
-								<div class="source-kitsu-image-container">
-									<img class="source-kitsu-image" src="assets/images/spotlight-article-media/Madougushi_Dahlia_wa_Utsumukanai/article-source_01.jpeg" alt=""></img>
-								</div>
-								<h4 class="source-kitsu-title">Dahlia in Bloom: Crafting a Fresh Start with Magical Tools</h4>
+						<div class="spotlight-sub-article">
+							<a class="spotlight-sub-article-title-link" href="https://kitsu.io/anime/nige-jouzu-no-wakagimi">
+								<h3 class="spotlight-sub-article-title">The Elusive Samurai</h3>
 							</a>
+							<div class="spotlight-sub-article-media-containter">
+								<img class="spotlight-sub-article-media" src="assets/images/spotlight-article-media/Crunchyroll_Please_Dont_Sleep_on_Dubbing/article-media_02.png" alt=""></img>
+							</div>
+							<p class="spotlight-sub-article-text">
+								Breathtakingly gorgeous and lively animation! The Characters and world look incredible immersive and interesting.
+							</p>
 						</div>
-					</div>
+						<div class="spotlight-sub-article">
+							<a class="spotlight-sub-article-title-link" href="https://kitsu.io/anime/shikanoko-nokonoko-koshitantan">
+								<h3 class="spotlight-sub-article-title">My Deer Friend Nokotan</h3>
+							</a>
+							<div class="spotlight-sub-article-media-containter">
+								<img class="spotlight-sub-article-media" src="assets/images/spotlight-article-media/Crunchyroll_Please_Dont_Sleep_on_Dubbing/article-media_03.webp" alt=""></img>
+							</div>
+							<p class="spotlight-sub-article-text">
+								The deer uprising is here! An absolute over the top, off the rails comedy that pushes the limits and embraces what all is Anime, in what looks like a spiritual successor to Nichijou.
+							</p>
+						</div>
+						<div class="spotlight-sub-article">
+							<a class="spotlight-sub-article-title-link" href="https://kitsu.io/anime/giji-harem">
+								<h3 class="spotlight-sub-article-title">Pseudo Harem</h3>
+							</a>
+							<div class="spotlight-sub-article-media-containter">
+								<img class="spotlight-sub-article-media" src="assets/images/spotlight-article-media/Crunchyroll_Please_Dont_Sleep_on_Dubbing/article-media_04.jpg" alt=""></img>
+							</div>
+							<p class="spotlight-sub-article-text">
+								Looks hilarious, wholesome, and possibly has a best girl contender! I’m really needing my romcom fix for the season and this could be it.
+							</p>
+						</div>																		
+
+					</div>				
+					
 					<div class="spotlight-artical">
 						<h2 class="spotlight-article-title">
 							All Gas, No Breaks, An Absolute Beast!
@@ -320,8 +334,7 @@
 						<div class="tiled-list scrolling-tiled-list">
 							<!-- <a class="tile" href=""><img class="tile-image" src="" alt=""></img></a> -->												
 							<a class="tile" href="https://kitsu.io/anime/spice-and-wolf-shin-anime"><img class="tile-image" src="https://media.kitsu.io/anime/45930/poster_image/large-44e5be35bb68c3b4d473ff9d33dba175.jpeg" alt="Spice and Wolf (New Anime)"></img>a</a>
-							<a class="tile" href="https://kitsu.io/anime/kaijuu-8-gou"><img class="tile-image" src="https://media.kitsu.io/anime/46300/poster_image/large-31cc66fd5854cc555d496ced7ab40c31.jpeg" alt="Kaiju No.8"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/kono-subarashii-sekai-ni-shukufuku-wo-3"><img class="tile-image" src="https://media.kitsu.io/anime/44911/poster_image/large-8a42bb8e9658fb275a902a821a797be9.jpeg" alt="KonoSuba 3"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/kaijuu-8-gou"><img class="tile-image" src="https://media.kitsu.io/anime/46300/poster_image/large-31cc66fd5854cc555d496ced7ab40c31.jpeg" alt="Kaiju No.8"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/tensei-shitara-slime-datta-ken-3rd-season"><img class="tile-image" src="https://media.kitsu.io/anime/46729/poster_image/large-4b30dd0d5a2559d47365fa80caa9a923.jpeg" alt="That Time I Got Reincarnated as a Slime Season 3"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/Mushoku-Tensei-II-Isekai-Ittara-Honki-Dasu-Part-2"><img class="tile-image" src="https://media.kitsu.io/anime/47694/poster_image/large-b5bde230c0bff92d223d3f792cbd462a.jpeg" alt="Jobless Reincarnation Season 2 Part 2"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/tsuki-ga-michibiku-isekai-douchuu-2"><img class="tile-image" src="https://media.kitsu.io/anime/45235/poster_image/large-a9217949be9a05b93beba240ee401d36.jpeg" alt="Tsukimichi -Moonlit Fantasy- 2"></img></a>
@@ -839,6 +852,21 @@
 
 			<div id="tab_linksandfollows" class="tab tab-actionable sidebar-content">
 				<div class="lf-feature">
+					<a class="lf-feature-link" href="https://www.crunchyroll.com/news/announcements/2024/7/7/fire-force-season-3-anime-april-2025-crunchyroll?utm_source=twitter-showpage&utm_medium=community_cr&utm_campaign=fire-force_en&referrer=twitter-showpage_community_cr_fire-force">
+						<h3 class="lf-feature-title">Fire Force Season 3 Premieres April 2025</h3>
+						<span class="lf-feature-source"><i class="fa-solid fa-link"></i> Crunchryoll News</span>
+						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/fireforces3.png"></img>
+					</a>
+					<a class="lf-feature-link" href="https://www.crunchyroll.com/news/announcements/2024/7/7/the-apothecary-diaries-season-2-anime-crunchyroll-2025?utm_source=twitter&utm_medium=community_cr&utm_campaign=news_en&referrer=twitter_community_cr_news">
+						<h3 class="lf-feature-title">The Apothecary Diaries Season 2 in 2025</h3>
+						<span class="lf-feature-source"><i class="fa-solid fa-link"></i> Crunchryoll News</span>
+						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/Apothecary_Diaries_Season2.png"></img>
+					</a>
+					<a class="lf-feature-link" href="https://www.crunchyroll.com/news/announcements/2024/7/7/dr-stone-science-future-anime-crunchyroll">
+						<h3 class="lf-feature-title">Dr. Stone Science Future Coming to Crunchyroll</h3>
+						<span class="lf-feature-source"><i class="fa-solid fa-link"></i> Crunchryoll News</span>
+						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/drstone_future.png"></img>
+					</a>
 					<a class="lf-feature-link" href="https://www.crunchyroll.com/news/seasonal-lineup/2024/6/18/summer-2024-anime-crunchyroll">
 						<h3 class="lf-feature-title">Crunchyroll Summer 2024 Season Lineup!</h3>
 						<span class="lf-feature-source"><i class="fa-solid fa-link"></i> Crunchryoll News</span>
@@ -848,11 +876,6 @@
 						<h3 class="lf-feature-title">Hidive Summer 2024 Season Lineup!</h3>
 						<span class="lf-feature-source"><i class="fa-solid fa-link"></i> Hidive News</span>
 						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/hidive-summer-2024.jpg"></img>
-					</a>					
-					<a class="lf-feature-link" href="https://twitter.com/hiro_mashima/status/1767399768697995324">
-						<h3 class="lf-feature-title"> Fairy Tail: 100 Years Quest July 2024</h3>
-						<span class="lf-feature-source"><i class="fa-brands fa-twitter"></i> @hiro_mashima</span>
-						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/fairytail100.jfif"></img>
 					</a>
 				</div>
 
@@ -867,15 +890,6 @@
 							</div>
 						</div>
 					</a>
-					<a class="lf-link" href="https://anitrendz.com/">
-						<div class="lf-item-container">								
-							<img loading="Lazy" class="lf-image" src="assets/images/icons/aniTrendz-icon.png"></img>
-							<div class="lf-text">
-								<span class="lf-displayname">Anime Trending</span>
-								<span class="lf-handle"><i class="fa-solid fa-link lf-handle-icon"></i> anitrendz.com</span>
-							</div>
-						</div>
-					</a>							
 					<a class="lf-link" href="https://www.animenewsnetwork.com/">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/ANN_Logo-icon.png"></img>
@@ -884,16 +898,7 @@
 								<span class="lf-handle"><i class="fa-solid fa-link lf-handle-icon"></i> animenewsnetwork.com</span>
 							</div>
 						</div>
-					</a>						
-					<a class="lf-link" href="https://twitter.com/AniNewsAndFacts">
-						<div class="lf-item-container">								
-							<img loading="Lazy" class="lf-image" src="assets/images/icons/twitterpropic-AniNewsAndFacts.jpg"></img>
-							<div class="lf-text">
-								<span class="lf-displayname">Anime News And Facts</span>
-								<span class="lf-handle"><i class="fa-brands fa-twitter lf-handle-icon"></i> @AniNewsAndFacts</span>
-							</div>
-						</div>
-					</a>								
+					</a>
 					<a class="lf-link" href="https://twitter.com/AIR_News01">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/twitterpropic-AIR_News01.jpg"></img>
@@ -903,6 +908,24 @@
 							</div>
 						</div>
 					</a>
+					<a class="lf-link" href="https://twitter.com/AniNewsAndFacts">
+						<div class="lf-item-container">								
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/twitterpropic-AniNewsAndFacts.jpg"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">Anime News And Facts</span>
+								<span class="lf-handle"><i class="fa-brands fa-twitter lf-handle-icon"></i> @AniNewsAndFacts</span>
+							</div>
+						</div>
+					</a>
+					<a class="lf-link" href="https://anitrendz.com/">
+						<div class="lf-item-container">								
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/aniTrendz-icon.png"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">Anime Trending</span>
+								<span class="lf-handle"><i class="fa-solid fa-link lf-handle-icon"></i> anitrendz.com</span>
+							</div>
+						</div>
+					</a>					
 				</div>
 				<div class="lf-list">
 					<h3 class="lf-heading">Seasonal Charts</h3>				
@@ -933,20 +956,20 @@
 							</div>
 						</div>
 					</a>						
-					<a class="lf-link" href="https://www.crunchyroll.com/news/seasonal-lineup/2024/3/13/spring-anime-2024-crunchyroll?utm_source=twitter&utm_medium=community_cr&utm_campaign=q2-2024_en&referrer=twitter_community_cr_q2-2024">
+					<a class="lf-link" href="https://www.crunchyroll.com/news/seasonal-lineup/2024/6/18/summer-2024-anime-crunchyroll">
 						<div class="lf-item-container">								
-							<img loading="Lazy" class="lf-image" src="assets/images/icons/Crunchyroll-Spring-2024.jfif"></img>
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/Crunchyroll-Summer-2024.jfif"></img>
 							<div class="lf-text">
-								<span class="lf-displayname">Crunchyroll Spring 2024</span>
+								<span class="lf-displayname">Crunchyroll Summer 2024</span>
 								<span class="lf-handle"><i class="fa-solid fa-link lf-handle-icon"></i> crunchyroll.com</span>
 							</div>
 						</div>
 					</a>
-					<a class="lf-link" href="https://news.hidive.com/2024/3/20/spring-2024-on-hidive-fresh-anime-simulcasts-and-exciting-english-dubs-just-for-you">
+					<a class="lf-link" href="https://news.hidive.com/2024/6/24/summer-2024-on-hidive-sizzling-anime-simulcasts-and-exclusive-english-dubs-await-you">
 						<div class="lf-item-container">								
-							<img loading="Lazy" class="lf-image" src="assets/images/icons/hidive-spring-2024-anime-simulcasts.jfif"></img>
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/hidive-summer-2024.jpg"></img>
 							<div class="lf-text">
-								<span class="lf-displayname">HIDIVE Spring 2024</span>
+								<span class="lf-displayname">HIDIVE Summer 2024</span>
 								<span class="lf-handle"><i class="fa-solid fa-link lf-handle-icon"></i> hidive.com</span>
 							</div>
 						</div>
