--- a/index.html
+++ b/index.html
@@ -334,13 +334,14 @@
 						<div class="tiled-list scrolling-tiled-list">
 							<!-- <a class="tile" href=""><img class="tile-image" src="" alt=""></img></a> -->												
 							<a class="tile" href="https://kitsu.io/anime/spice-and-wolf-shin-anime"><img class="tile-image" src="https://media.kitsu.io/anime/45930/poster_image/large-44e5be35bb68c3b4d473ff9d33dba175.jpeg" alt="Spice and Wolf (New Anime)"></img>a</a>
-							<a class="tile" href="https://kitsu.io/anime/kaijuu-8-gou"><img class="tile-image" src="https://media.kitsu.io/anime/46300/poster_image/large-31cc66fd5854cc555d496ced7ab40c31.jpeg" alt="Kaiju No.8"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/tensei-shitara-slime-datta-ken-3rd-season"><img class="tile-image" src="https://media.kitsu.io/anime/46729/poster_image/large-4b30dd0d5a2559d47365fa80caa9a923.jpeg" alt="That Time I Got Reincarnated as a Slime Season 3"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/Kimetsu-no-Yaiba-Hashira-Geikohen"><img class="tile-image" src="https://media.kitsu.io/anime/47635/poster_image/large-4211877e3a64e0f5beacfaca550aae16.jpeg" alt="Demon Slayer: Hashira Training Arc"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/boku-no-hero-academia-7th-season"><img class="tile-image" src="https://media.kitsu.io/anime/47232/poster_image/large-e72a84111240e5a313fca1a65341303d.jpeg" alt="Hero Academia Season 7"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/kaijuu-8-gou"><img class="tile-image" src="https://media.kitsu.io/anime/46300/poster_image/large-31cc66fd5854cc555d496ced7ab40c31.jpeg" alt="Kaiju No.8"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/Mushoku-Tensei-II-Isekai-Ittara-Honki-Dasu-Part-2"><img class="tile-image" src="https://media.kitsu.io/anime/47694/poster_image/large-b5bde230c0bff92d223d3f792cbd462a.jpeg" alt="Jobless Reincarnation Season 2 Part 2"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/tsuki-ga-michibiku-isekai-douchuu-2"><img class="tile-image" src="https://media.kitsu.io/anime/45235/poster_image/large-a9217949be9a05b93beba240ee401d36.jpeg" alt="Tsukimichi -Moonlit Fantasy- 2"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/Kimetsu-no-Yaiba-Hashira-Geikohen"><img class="tile-image" src="https://media.kitsu.io/anime/47635/poster_image/large-f12ea65ae61eaeb2e73595870b4308bc.jpeg" alt="Demon Slayer: Hashira Training Arc"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/yuru-camp-3"><img class="tile-image" src="https://media.kitsu.io/anime/46649/poster_image/large-6671ae841d0897a9f999cb9417f7695b.jpeg" alt="Laid Back Camp 3"></img></a>							
-							<a class="tile" href="https://kitsu.io/anime/boku-no-hero-academia-7th-season"><img class="tile-image" src="https://media.kitsu.io/anime/47232/poster_image/large-e72a84111240e5a313fca1a65341303d.jpeg" alt="Hero Academia Season 7"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/yuru-camp-3"><img class="tile-image" src="https://media.kitsu.io/anime/46649/poster_image/large-6671ae841d0897a9f999cb9417f7695b.jpeg" alt="Laid Back Camp 3"></img></a>
+							
 						</div><!-- tiled-list -->
 					</div><!-- Currently Watching-->			
 
@@ -385,6 +386,7 @@
 							<a class="tile" href="https://kitsu.io/anime/mahoutsukai-no-yome-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/46436/poster_image/large-4143acc41341b91804009d0e7508dc60.jpeg" alt="The Ancient Magus' Bride Season 2"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/dark-gathering"><img class="tile-image" src="https://media.kitsu.io/anime/46279/poster_image/large-7f454e242f8934b587b4724d75f5e6f0.jpeg" alt="Dark Gathering"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/made-in-abyss-retsujitsu-no-ougonkyou"><img class="tile-image" src="https://media.kitsu.io/anime/42951/poster_image/large-8fd6abf81d8c4223a61bd0e4192eba04.jpeg" alt="Made in Abyss: The Golden City of the Scorching Sun"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/hananoi-kun-to-koi-no-yamai"><img class="tile-image" src="https://media.kitsu.io/anime/47574/poster_image/large-154e84e8ef074fa1fa26d8b74ac845ba.jpeg" alt="A Condition Called Love"></img></a>
 							<!--
 								<a class="tile" href="https://kitsu.io/anime/rurouni-kenshin-meiji-kenkaku-romantan-2023"><img class="tile-image" src="https://media.kitsu.io/anime/45616/poster_image/large-1881293614632c347d895db0315419a7.jpeg" alt="Rurouni Kenshin"></img></a>
 								<a class="tile" href="https://kitsu.io/anime/lovely-complex"><img class="tile-image" src="https://media.kitsu.io/anime/1833/poster_image/large-892da306ae6f1ec03daefae58c45138b.jpeg" alt="Lovely Complex"></img></a>
@@ -405,8 +407,7 @@
 
 						<h3 class="section-subheading">Waiting for Dub to Finish</h3> 
 						<div class="tiled-list scrolling-tiled-list">
-							<a class="tile" href="https://kitsu.io/anime/karakai-jouzu-no-takagi-san-2"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/42110/large.jpg" alt="Teasing Master Takagi-san 2"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/hananoi-kun-to-koi-no-yamai"><img class="tile-image" src="https://media.kitsu.io/anime/47574/poster_image/large-154e84e8ef074fa1fa26d8b74ac845ba.jpeg" alt="A Condition Called Love"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/karakai-jouzu-no-takagi-san-2"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/42110/large.jpg" alt="Teasing Master Takagi-san 2"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/lv2-kara-cheat-datta-moto-yuusha-kouho-no-mattari-isekai-life"><img class="tile-image" src="https://media.kitsu.io/anime/48125/poster_image/large-ef5945662e78d142bfc45726a0b506e0.jpeg" alt="Chillin' in Another World with Level 2 Super Cheat Powers"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/helck"><img class="tile-image" src="https://media.kitsu.io/anime/45876/poster_image/large-2b41b177707ddf123c3633f6bb641e4d.jpeg" alt="Helck"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/yoru-no-kurage-wa-oyogenai"><img class="tile-image" src="https://media.kitsu.io/anime/47233/poster_image/large-b4cf1ec48d885cef74ff3bd42b091912.jpeg" alt="Jellyfish Can't Swim in the Night"></img></a>
@@ -420,17 +421,17 @@
 						<h2 class="section-heading">Most Anticipated</h2>
 						<h3 class="section-subheading">Summer 2024</h3> 
 						<div class="tiled-list scrolling-tiled-list">
-							<a class="tile" href="https://kitsu.io/anime/fairy-tail-100-years-quest"><img class="tile-image" src="https://media.kitsu.io/anime/poster_images/45159/large.jpg" alt="Fairy Tail: 100 Years Quest"></img></a>							
+							<a class="tile" href="https://kitsu.io/anime/fairy-tail-100-years-quest"><img class="tile-image" src="https://media.kitsu.io/anime/45159/poster_image/large-ba31c3b38842ea8765313ca889e2600d.jpeg" alt="Fairy Tail: 100 Years Quest"></img></a>							
 							<a class="tile" href="https://kitsu.io/anime/oshi-no-ko-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/47659/poster_image/large-8881975ead44514c3d76220a7b86e19d.jpeg" alt="Oshi no Ko Season 2"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/tower-of-god-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/46312/poster_image/large-f113d2c0b280301d7827f17723fa5754.jpeg" alt="Tower of God Season 2"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/madougushi-dahlia-wa-utsumukanai"><img class="tile-image" src="https://media.kitsu.io/anime/47892/poster_image/large-3fd1a21d91b3d15272f019c74e73adbc.jpeg" alt="Dahlia in Bloom: Crafting a Fresh Start with Magical Tools"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/madougushi-dahlia-wa-utsumukanai"><img class="tile-image" src="https://media.kitsu.io/anime/47892/poster_image/large-3d0715b5e5a3859da3474e3cda50bc8a.jpeg" alt="Dahlia in Bloom: Crafting a Fresh Start with Magical Tools"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/vtuber-nanda-ga-haishin-kiri-wasuretara-densetsu-ni-natteta"><img class="tile-image" src="https://media.kitsu.io/anime/47004/poster_image/large-0fea164d0a348eb8334d2f93072b5abd.jpeg" alt="VTuber Legend"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/make-heroine-ga-oosugiru"><img class="tile-image" src="https://media.kitsu.io/anime/48312/poster_image/large-ef857d4d1a7bbfc872005bd8ec222654.jpeg" alt="Makeine: Too Many Losing Heroines!"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/giji-harem"><img class="tile-image" src="https://media.kitsu.io/anime/47296/poster_image/large-1f3461f7db462aa14d818823209b63ff.jpeg" alt="Pseudo Harem"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/tokidoki-bosotto-russiago-de-dereru-tonari-no-alya-san"><img class="tile-image" src="https://media.kitsu.io/anime/47192/poster_image/large-ffe551f96e2a57082b30e79ac3fe1cbc.jpeg" alt="Alya Sometimes Hides Her Feelings in Russian"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/isekai-shikkaku"><img class="tile-image" src="https://media.kitsu.io/anime/46243/poster_image/large-3c0f5639e07a85a1656e22b52483b857.jpeg" alt="No Longer Human…In Another World"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/kimi-to-boku-no-saigo-no-senjou-aruiwa-sekai-ga-hajimaru-seisen-season-2"><img class="tile-image" src="https://media.kitsu.io/anime/45272/poster_image/large-f358a57b59a2f18765223103a45c1272.jpeg" alt="Our Last Crusade or the Rise of a New World Season 2"></img></a>
-							<a class="tile" href="https://kitsu.io/anime/naze-boku-no-sekai-wo-daremo-oboeteinai-no-ka"><img class="tile-image" src="https://media.kitsu.io/anime/47786/poster_image/large-d39062d7cee2973b2f34e4597fc4733a.jpeg" alt="Why nobody remembers my world?"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/naze-boku-no-sekai-wo-daremo-oboeteinai-no-ka"><img class="tile-image" src="https://media.kitsu.io/anime/47786/poster_image/large-ed6384832e4aad256106735ddc814825.jpeg" alt="Why nobody remembers my world?"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/kono-sekai-wa-fukanzen-sugiru"><img class="tile-image" src="https://media.kitsu.io/anime/47236/poster_image/large-8f2f4bb1adabfd4d8fb75a17cfee25f0.jpeg" alt="Quality Assurance in Another World"></img></a>
 							<!--
 							<a class="tile" href="https://kitsu.io/anime/gimai-seikatsu"><img class="tile-image" src="https://media.kitsu.io/anime/46276/poster_image/large-79b0d9fa9c7f51c5eb7b384d77eab8ff.jpeg" alt="Days with my Step Sister"></img></a>
