--- a/index.html
+++ b/index.html
@@ -79,6 +79,26 @@
 				<div id="tab_spotlight" class="tab tab-actionable main-item">
 					<div class="spotlight-artical">
 						<h2 class="spotlight-article-title">
+							The Deer Uprising Is Here! And English Dubbed!
+						</h2>
+						<p class="spotlight-article-text">
+							An absolute over the top, off the rails comedy that pushes the limits and embraces what all is Anime, in what looks like a spiritual successor to Nichijou.Thank you mad lads at Crunchyroll for dubbing!
+						</p>
+						<div class="spotlight-article-media-container">
+							<img class="spotlight-article-media" src="assets/images/spotlight-article-media/My_Deer_Friend_Nokotan/article-media_01.webp" alt=""></img>
+						</div>
+						<div class="spotlight-article-source-container">
+							<a class="spotlight-article-source-kitsu" href="https://kitsu.io/anime/shikanoko-nokonoko-koshitantan">
+								<div class="source-kitsu-image-container">
+									<img class="source-kitsu-image" src="assets/images/spotlight-article-media/My_Deer_Friend_Nokotan/article-source_01.jpeg" alt=""></img>
+								</div>
+								<h4 class="source-kitsu-title">My Deer Friend Nokotan</h4>
+							</a>
+						</div>
+					</div>					
+					
+					<div class="spotlight-artical">
+						<h2 class="spotlight-article-title">
 							Crunchyroll Please Don’t Sleep on Dubbing
 						</h2>
 						<div class="spotlight-sub-article">
@@ -101,17 +121,6 @@
 							</div>
 							<p class="spotlight-sub-article-text">
 								Breathtakingly gorgeous and lively animation! The Characters and world look incredible immersive and interesting.
-							</p>
-						</div>
-						<div class="spotlight-sub-article">
-							<a class="spotlight-sub-article-title-link" href="https://kitsu.io/anime/shikanoko-nokonoko-koshitantan">
-								<h3 class="spotlight-sub-article-title">My Deer Friend Nokotan</h3>
-							</a>
-							<div class="spotlight-sub-article-media-containter">
-								<img class="spotlight-sub-article-media" src="assets/images/spotlight-article-media/Crunchyroll_Please_Dont_Sleep_on_Dubbing/article-media_03.webp" alt=""></img>
-							</div>
-							<p class="spotlight-sub-article-text">
-								The deer uprising is here! An absolute over the top, off the rails comedy that pushes the limits and embraces what all is Anime, in what looks like a spiritual successor to Nichijou.
 							</p>
 						</div>
 						<div class="spotlight-sub-article">
@@ -853,6 +862,11 @@
 
 			<div id="tab_linksandfollows" class="tab tab-actionable sidebar-content">
 				<div class="lf-feature">
+					<a class="lf-feature-link" href="https://www.crunchyroll.com/news/latest/2024/7/11/rent-a-girlfriend-season-4-announced">
+						<h3 class="lf-feature-title">Rent-a-Girlfriend Season 4 Announced for 2025</h3>
+						<span class="lf-feature-source"><i class="fa-solid fa-link"></i> Crunchryoll News</span>
+						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/rentagirlfriend4.png"></img>
+					</a>					
 					<a class="lf-feature-link" href="https://www.crunchyroll.com/news/announcements/2024/7/7/fire-force-season-3-anime-april-2025-crunchyroll?utm_source=twitter-showpage&utm_medium=community_cr&utm_campaign=fire-force_en&referrer=twitter-showpage_community_cr_fire-force">
 						<h3 class="lf-feature-title">Fire Force Season 3 Premieres April 2025</h3>
 						<span class="lf-feature-source"><i class="fa-solid fa-link"></i> Crunchryoll News</span>
@@ -867,16 +881,6 @@
 						<h3 class="lf-feature-title">Dr. Stone Science Future Coming to Crunchyroll</h3>
 						<span class="lf-feature-source"><i class="fa-solid fa-link"></i> Crunchryoll News</span>
 						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/drstone_future.png"></img>
-					</a>
-					<a class="lf-feature-link" href="https://www.crunchyroll.com/news/seasonal-lineup/2024/6/18/summer-2024-anime-crunchyroll">
-						<h3 class="lf-feature-title">Crunchyroll Summer 2024 Season Lineup!</h3>
-						<span class="lf-feature-source"><i class="fa-solid fa-link"></i> Crunchryoll News</span>
-						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/Crunchyroll-Summer-2024.jfif"></img>
-					</a>
-					<a class="lf-feature-link" href="https://news.hidive.com/2024/6/24/summer-2024-on-hidive-sizzling-anime-simulcasts-and-exclusive-english-dubs-await-you">
-						<h3 class="lf-feature-title">Hidive Summer 2024 Season Lineup!</h3>
-						<span class="lf-feature-source"><i class="fa-solid fa-link"></i> Hidive News</span>
-						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/hidive-summer-2024.jpg"></img>
 					</a>
 				</div>
 
