Updated Meta Data
Updated Keywords

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<title>MyAnimeProfile</title>
 		<meta name="description" content="A fun custom space to share a bit about myself and my enthusiasm for anime!">
-		<meta name="keywords" content="anime, anime profile, anime favorites, anime recomenddations, anime resources, personal website, css-grid, web-design, responsive-design, html-css-javascript, anime-search, anime-fans, front-end-development, anime-website, anime-list, anime-sources, ui-ux-design">
+		<meta name="keywords" content="heykperks, anime, anime profile, my anime profile, myanimeprofile, favorite anime, anime favorites, anime recomenddations, anime resources, personal website, css-grid, web-design, responsive-design, html-css-javascript, anime-search, anime-fans, front-end-development, anime-website, anime-list, anime-sources, ui-ux-design">
 		<meta name="author" content="Kyle @heyKPerks">		
 		<link rel="icon" type="image/x-icon" href="favicon.png">
 		<meta charset="utf-8" />
