--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
 							<a class="tile" href="https://kitsu.io/anime/helck"><img loading="Lazy" class="tile-image" src="https://media.kitsu.io/anime/45876/poster_image/large-2b41b177707ddf123c3633f6bb641e4d.jpeg" alt="Helck"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/boku-no-kokoro-no-yabai-yatsu"><img loading="Lazy" class="tile-image" src="https://media.kitsu.io/anime/46299/poster_image/large-116b49ab958abf27bbbb38e9215a0fe1.jpeg" alt="The Dangers in My Heart"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/sentai-daishikkaku"><img loading="Lazy" class="tile-image" src="https://media.kitsu.io/anime/46840/poster_image/large-469f7caa559e882eb322d55e677c3fea.jpeg" alt="Go! Go! Loser Ranger!"></img></a>							
-							<a class="tile" href="https://kitsu.io/anime/yozakura-san-chi-no-daisakusen"><img loading="Lazy" class="tile-image" src="https://media.kitsu.io/anime/46869/poster_image/large-1dce6f6d3b1efb86e8222632eba595ee.jpeg" alt="Mission: Yozakura Family"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/yozakura-san-chi-no-daisakusen"><img loading="Lazy" class="tile-image" src="https://media.kitsu.io/anime/46869/poster_image/large-2387b561d9afebe2d646de3b2cff35af.jpeg" alt="Mission: Yozakura Family"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/Dead-Dead-Demons-Dededededestruction-Zenshou"><img loading="Lazy" class="tile-image" src="https://media.kitsu.io/anime/45989/poster_image/large-501cec7dd2c71af240b02745256ade91.jpeg" alt="Dead Dead Demon's Dededede Destruction"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/kono-sekai-wa-fukanzen-sugiru"><img loading="Lazy" class="tile-image" src="https://media.kitsu.io/anime/47236/poster_image/large-8f2f4bb1adabfd4d8fb75a17cfee25f0.jpeg" alt="Quality Assurance in Another World"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/isekai-yururi-kikou-kosodate-shinagara-boukensha-shimasu"><img loading="Lazy" class="tile-image" src="https://media.kitsu.io/anime/48390/poster_image/large-b199b98d15d371a75711b09c26eb001c.jpeg" alt="Raising Kids While Adventuring"></img></a>
@@ -485,6 +485,7 @@
 							<a class="tile" href="https://kitsu.io/anime/kakuriyo-no-yadomeshi-2nd-season"><img loading="Lazy" class="tile-image" src="https://media.kitsu.io/anime/48822/poster_image/large-fa5c78fe9b7fa029449dd8d39dd4bba6.jpeg" alt="Bed & Breakfast for Spirits- Season 2"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/go-toubun-no-hanayome"><img loading="Lazy" class="tile-image" src="https://media.kitsu.io/anime/48807/poster_image/large-5f3e16d73ca7960fde730dd53ff7a68d.jpeg" alt="Quintessential Quintuplets Hanayome"></img></a>
 							<a class="tile" href="https://kitsu.io/anime/tsuki-ga-michibiku-isekai-douchuu-3rd-season"><img loading="Lazy" class="tile-image" src="https://media.kitsu.io/anime/48978/poster_image/large-53410795467f453a3e4d3d5eb4e1e9ef.jpeg" alt="Tsukimichi Moonlit Fantasy Season 3"></img></a>
+							<a class="tile" href="https://kitsu.io/anime/kakkou-no-iinazuke-2nd-season"><img loading="Lazy" class="tile-image" src="https://media.kitsu.io/anime/49067/poster_image/large-bdd44b01e38ffe6421814f41b9d1600f.jpeg" alt="A Couple of Cuckoos Season 2"></img></a>
 						</div><!-- tiled-list -->
 					</div><!-- Most Anticipated -->				
 					<div class="watching-item"><!--Please Dub -->
@@ -1233,21 +1234,66 @@
 							</div>
 						</div>
 					</a>
-					<a class="lf-link more-lf-anitube" href="https://www.tiktok.com/@rachelszero?_t=8dvzUWWNVYg&_r=1">
-						<div class="lf-item-container">
-							<img loading="Lazy" class="lf-image" src="assets/images/icons/tiktokpropic-rachelszero.jpeg"></img>
-							<div class="lf-text">
-								<span class="lf-displayname">Rachel</span>
-								<span class="lf-handle"><i class="fa-brands fa-tiktok lf-handle-icon"></i> @rachelszero</span>
-							</div>
-						</div>
-					</a>					
 					<a class="lf-link more-lf-anitube" href="https://www.youtube.com/@TotallyNotMark">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/youtubepropic-TotallyNotMark.jpg"></img>
 							<div class="lf-text">
 								<span class="lf-displayname">Totally Not Mark</span>
 								<span class="lf-handle"><i class="fa-brands fa-youtube lf-handle-icon"></i> @TotallyNotMark</span>
+							</div>
+						</div>
+					</a>
+					<a class="lf-link more-lf-anitube" href="https://www.youtube.com/@Kapppa">
+						<div class="lf-item-container">
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/Kapppa.jpg"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">Kap Cha</span>
+								<span class="lf-handle"><i class="fa-brands fa-youtube lf-handle-icon"></i> @Kapppa</span>
+							</div>
+						</div>
+					</a>					
+					<a class="lf-link more-lf-anitube" href="https://www.tiktok.com/@eulanthias">
+						<div class="lf-item-container">
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/eulanthias.jpeg"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">Otaku News For You</span>
+								<span class="lf-handle"><i class="fa-brands fa-tiktok lf-handle-icon"></i> @eulanthias</span>
+							</div>
+						</div>
+					</a>
+					<a class="lf-link more-lf-anitube" href="https://www.tiktok.com/@tacotheweeb">
+						<div class="lf-item-container">
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/tacotheweeb.jpeg"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">TacoTheWeeb</span>
+								<span class="lf-handle"><i class="fa-brands fa-tiktok lf-handle-icon"></i> @tacotheweeb</span>
+							</div>
+						</div>
+					</a>
+					<a class="lf-link more-lf-anitube" href="https://www.tiktok.com/@swaynami">
+						<div class="lf-item-container">
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/swaynami.jpeg"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">SWAYNAMI</span>
+								<span class="lf-handle"><i class="fa-brands fa-tiktok lf-handle-icon"></i> @swaynami</span>
+							</div>
+						</div>
+					</a>
+					<a class="lf-link more-lf-anitube" href="https://www.tiktok.com/@kazadasama">
+						<div class="lf-item-container">
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/Kazadasama.jpeg"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">Kazadasama</span>
+								<span class="lf-handle"><i class="fa-brands fa-tiktok lf-handle-icon"></i> @kazadasama</span>
+							</div>
+						</div>
+					</a>					
+					<a class="lf-link more-lf-anitube" href="https://www.tiktok.com/@rachelszero?_t=8dvzUWWNVYg&_r=1">
+						<div class="lf-item-container">
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/tiktokpropic-rachelszero.jpeg"></img>
+							<div class="lf-text">
+								<span class="lf-displayname">Rachel</span>
+								<span class="lf-handle"><i class="fa-brands fa-tiktok lf-handle-icon"></i> @rachelszero</span>
 							</div>
 						</div>
 					</a>
@@ -1286,16 +1332,16 @@
 								<span class="lf-handle"><i class="fa-brands fa-youtube lf-handle-icon"></i> @Kamimashita</span>
 							</div>
 						</div>
-					</a>		
-					<a class="lf-link more-lf-anitube" href="https://www.youtube.com/@GLENLOVESANIME">
-						<div class="lf-item-container">								
-							<img loading="Lazy" class="lf-image" src="assets/images/icons/youtubepropic-GLENLOVESANIME.jpg"></img>
+					</a>
+					<a class="lf-link more-lf-anitube" href="https://www.youtube.com/@theweebcommander">
+						<div class="lf-item-container">
+							<img loading="Lazy" class="lf-image" src="assets/images/icons/theweebcommander.jpg"></img>
 							<div class="lf-text">
-								<span class="lf-displayname">GLENLOVESANIME</span>
-								<span class="lf-handle"><i class="fa-brands fa-youtube lf-handle-icon"></i> @GLENLOVESANIME</span>
+								<span class="lf-displayname">The Weeb Commander</span>
+								<span class="lf-handle"><i class="fa-brands fa-youtube lf-handle-icon"></i> @theweebcommander</span>
 							</div>
 						</div>
-					</a>		
+					</a>					
 					<a class="lf-link more-lf-anitube" href="https://www.youtube.com/@IslaMcTear">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/youtubepropic-IslaMcTear.jpg"></img>
@@ -1538,7 +1584,7 @@
 							</div>
 						</div>
 					</a>
-					<!--
+				<!--
 					<a class="lf-link more-lf-artistfanart" href="https://x.com/bluethebone">
 						<div class="lf-item-container">								
 							<img loading="Lazy" class="lf-image" src="assets/images/icons/twitterpropic-bluethebone.jpg"></img>
@@ -1584,7 +1630,7 @@
 							</div>
 						</div>
 					</a>					
-					-->
+				-->
 				</div><!-- Fanart -->
 			</div><!-- links and follows -->
 
