--- a/index.html
+++ b/index.html
@@ -904,26 +904,11 @@
 
 			<div id="tab_linksandfollows" class="tab tab-actionable sidebar-content">
 				<div class="lf-feature">
-					<a class="lf-feature-link" href="https://www.crunchyroll.com/news/latest/2024/7/11/rent-a-girlfriend-season-4-announced">
-						<h3 class="lf-feature-title">Rent-a-Girlfriend Season 4 Announced for 2025</h3>
-						<span class="lf-feature-source"><i class="fa-solid fa-link"></i> Crunchryoll News</span>
-						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/rentagirlfriend4.png"></img>
-					</a>					
-					<a class="lf-feature-link" href="https://www.crunchyroll.com/news/announcements/2024/7/7/fire-force-season-3-anime-april-2025-crunchyroll?utm_source=twitter-showpage&utm_medium=community_cr&utm_campaign=fire-force_en&referrer=twitter-showpage_community_cr_fire-force">
-						<h3 class="lf-feature-title">Fire Force Season 3 Premieres April 2025</h3>
-						<span class="lf-feature-source"><i class="fa-solid fa-link"></i> Crunchryoll News</span>
-						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/fireforces3.png"></img>
-					</a>
-					<a class="lf-feature-link" href="https://www.crunchyroll.com/news/announcements/2024/7/7/the-apothecary-diaries-season-2-anime-crunchyroll-2025?utm_source=twitter&utm_medium=community_cr&utm_campaign=news_en&referrer=twitter_community_cr_news">
-						<h3 class="lf-feature-title">The Apothecary Diaries Season 2 in 2025</h3>
-						<span class="lf-feature-source"><i class="fa-solid fa-link"></i> Crunchryoll News</span>
-						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/Apothecary_Diaries_Season2.png"></img>
-					</a>
-					<a class="lf-feature-link" href="https://www.crunchyroll.com/news/announcements/2024/7/7/dr-stone-science-future-anime-crunchyroll">
-						<h3 class="lf-feature-title">Dr. Stone Science Future Coming to Crunchyroll</h3>
-						<span class="lf-feature-source"><i class="fa-solid fa-link"></i> Crunchryoll News</span>
-						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/drstone_future.png"></img>
-					</a>
+					<a class="lf-feature-link" href="https://kitsu.app/posts/9837041">
+						<h3 class="lf-feature-title">Kitsu Now At New Domain Kitsu.app</h3>
+						<span class="lf-feature-source"><i class="fa-solid fa-link"></i> KITSU.APP</span>
+						<img loading="Lazy" class="lf-feature-image" src="assets/images/thumbnails/Featured_Links/kitsulogo.png"></img>
+					</a>			
 				</div>
 
 				<div class="lf-list">
